# world-cup-tui

./: AGENTS.md  Cargo.toml  DESIGN.md  LICENSE  README.md
.github/: set-topics.sh
.github/workflows/: ci.yml  release.yml
assets/: demo.tape
openspec/: config.yaml
openspec/changes/archive/2026-06-12-add-country-flags/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-12-add-country-flags/specs/country-flags/: spec.md
openspec/changes/archive/2026-06-12-two-column-timeline/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-12-two-column-timeline/specs/match-detail-ui/: spec.md
openspec/changes/archive/2026-06-12-world-cup-tui/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-12-world-cup-tui/specs/live-refresh/: spec.md
openspec/changes/archive/2026-06-12-world-cup-tui/specs/match-data/: spec.md
openspec/changes/archive/2026-06-12-world-cup-tui/specs/match-detail-ui/: spec.md
openspec/changes/archive/2026-06-12-world-cup-tui/specs/match-list-ui/: spec.md
openspec/changes/archive/2026-06-14-load-finished-history/: design.md  proposal.md  tasks.md
openspec/changes/load-finished-history/: tasks.md
openspec/specs/country-flags/: spec.md
openspec/specs/live-refresh/: spec.md
openspec/specs/match-data/: spec.md
openspec/specs/match-detail-ui/: spec.md
openspec/specs/match-list-ui/: spec.md
src/: app.rs  espn.rs  flags.rs  lib.rs  main.rs  model.rs
src/ui/: detail.rs  list.rs  mod.rs  theme.rs
tests/: normalize.rs
tests/fixtures/: scoreboard.json  summary.json
(+2 files in other folders)
