[package]
name = "world-cup-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.45"
crossterm = "0.29.0"
ratatui = "0.30.1"
reqwest = { version = "0.13.4", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "sync", "time"] }
unicode-width = "0.2.2"
